# pyAppAutomation

./: Dockerfile  README.md  buildDocker.sh  pyproject.toml  runDocker.sh
